--- a/conf/.env
+++ b/conf/.env
@@ -36,9 +36,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 # You can use mysql unix socket if available, it overrides DB_HOST and DB_PORT values.
 #DB_UNIX_SOCKET=/var/run/mysqld/mysqld.sock
-DB_DATABASE=yunobase
-DB_USERNAME=yunouser
-DB_PASSWORD=yunopass
+DB_DATABASE=__DB_NAME__
+DB_USERNAME=__DB_NAME__
+DB_PASSWORD=__DB_PWD__
 DB_PREFIX=
 DB_TEST_HOST=127.0.0.1
 DB_TEST_DATABASE=monica_test
@@ -57,14 +57,14 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=
 # Outgoing emails will be sent with these identity
-MAIL_FROM_ADDRESS=monica@yunodomain
+MAIL_FROM_ADDRESS=monica@__DOMAIN__
 MAIL_FROM_NAME="Monica"
 # New registration notification sent to this email
-APP_EMAIL_NEW_USERS_NOTIFICATION=yunomail
+APP_EMAIL_NEW_USERS_NOTIFICATION=__EMAIL__
 
 
 # Default locale used in the application.
-APP_DEFAULT_LOCALE=language
+APP_DEFAULT_LOCALE=__LANGUAGE__
 
 # Ability to disable signups on your instance.
 # Can be true or false. Default to false.
